deploy/kubernetes/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: factory-admin
  labels:
    app.kubernetes.io/name: factory-admin
    app.kubernetes.io/part-of: factory
    shard: internal
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: factory-admin-hummingbird--factory-sandbox.apps.int.spoke.preprod.us-east-1.aws.paas.redhat.com
  to:
    kind: Service
    name: factory-admin
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
